blog changes, images added, content update

--- a/single-post.html
+++ b/single-post.html
@@ -12,6 +12,8 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/gresk.webflow.css" rel="stylesheet" type="text/css">
+    <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Gothic A1:regular,700,900"]  }});</script>
   
@@ -28,23 +30,23 @@
       </a>
     </div>
     <ul class="nav-links">
-      <!-- <li><a href="index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">Impact</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="works.html">Process</a></li>
       <li><a href="blog.html">Blog</a></li>
-      <li><a href="contact-us.html">Contact</a></li> -->
+      <li><a href="contact-us.html">Contact</a></li>
 
 
 
 
 
     </ul>
-    <div class="burger">
+    <!-- <div class="burger">
       <div class="line1"></div>
       <div class="line2"></div>
       <div class="line3"></div>
-    </div>
+    </div> -->
     <!-- </nav> -->
 
   </div>
@@ -56,11 +58,11 @@
       </div>
     </div>
     <div class="container margin-bottom">
-      <div class="col lg-12"><img src="http://via.placeholder.com/1168x710" srcset="http://via.placeholder.com/1168x710 500w, http://via.placeholder.com/1168x710 800w, images/http://via.placeholder.com/1168x710 1080w, http://via.placeholder.com/1168x710 1280w" sizes="100vw" alt=""></div>
+      <div class="col lg-12"><img src="img/30.jpeg"  sizes="100vw" alt=""></div>
     </div>
     <div class="container">
       <div class="col flex">
-        <div class="blog-item-date xs-12">Sep 19</div>
+        <div class="blog-item-date xs-12">April 19</div>
         <div class="blog-text">
           <div class="blog-rich-text w-richtext">
            <p>For a large corporation, a small business or a solopreneur, the demands of managing the day-to-day running of your
@@ -69,32 +71,32 @@
           its visions or smashing daily, weekly or monthly goals. Outsource your business tasks to hit those goals faster because
           you cannot do it all by yourself.
           Here is a list of 10 tasks you should be outsourcing regularly:</p><br> 
-          <h5>1. Bookeeping</h5> <br>
+          <h4>1. Bookeeping</h4> <br>
           <p>Except your company is a bookkeeping company or you are a financial guru, you might not be interested in the financial
           records that keep a business running. You can do the bookkeeping yourself but it will take your time – time you could
           have invested in other aspects of your business. There are virtual assistants with financial skill sets. You can
           contract this to them and they will take care of all your messy financial work.</p> <br>
-          <h5>2. Email Management</h5> <br>
+          <h4>2. Email Management</h4> <br>
           <p>Email management
           Everyone hates the boring monotonous routine of “best regards” and “find attached”, and the frustrating ordeal of
           scanning through thousands of emails and prioritizing which to reply to and how to reply to each of them. Why do you
           keep on doing this when it is not saving you any time or money? According to a study by Adobe, on average, you can spend
           six (6) hours a day doing this. Outsourcing the task of email management would help you regain the time you lose each
           day.</p> <br>
-          <h5>3. Customer Feedback</h5><br>
+          <h4>3. Customer Feedback</h4><br>
           <p>The customer is always right. Therefore, it is important to factor customer feedback into your business model. However,
           you don’t have to do it yourself especially if you have a large customer base. It would leave you no room to act on that
           feedback. You can outsource this task to a virtual assistant who can respond and forward the concerns of your customers.
           Your business will thank you for this when you outsource it.</p><br>
-          <h5>4. Travel Management</h5><br>
+          <h4>4. Travel Management</h4><br>
           <p>Every now and then, you might need to travel for both business and personal purposes. The choice of a means of travel
           and other decisions like accommodation, food, guide, etc. can be overwhelming and can take a significant part of your
           time. Let a virtual assistant handle it for you.</p><br>
-          <h5>5. Data Entry</h5><br>
+          <h4>5. Data Entry</h4><br>
           <p>If you run a project and need to store a large amount of data, it would be very useful to let someone else enter that
           data on your behalf. Virtual assistants can help you do that conveniently, helping you speed up the completion of your
           projects.</p> <br>
-          <h5>6. Schedule and Calendar management</h5><br>
+          <h4>6. Schedule and Calendar management</h4><br>
           <p>Someone has to book appointments and cancel them. If your business model relies on face-to-face or virtual meetings, you
           would easily lose yourself trying to catch up with the number, date and time of appointments. You can outsource this to
           a virtual assistant and free up your mind for what to say at your meetings!</p><br>
@@ -106,23 +108,23 @@
             
             
             <figure style="max-width:1280pxpx" id="w-node-3fa1170ce4c1-cfe553e0" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-              <div><img src="http://via.placeholder.com/1068x620" alt=""></div>
-              <figcaption>Financial Report</figcaption>
+              <div><img src="img/b12.jpg" alt=""></div>
+              <figcaption>Data Entry</figcaption>
             </figure>
-            <h5>7. Database management</h5><br>
+            <h4>7. Database management</h4><br>
             <p>Except you are a database manager, you might be better off managing your time by allowing a virtual assistant manage
             your database while freeing up your time for more productive work. Even if you were a database manager, you would still
             need some help in managing several databases. A virtual assistant can help you do this effectively.</p><br>
-            <h5>8. Digital marketing</h5><br>
+            <h4>8. Digital marketing</h4><br>
             <p> Digital content is what drives businesses online. Digital marketing is broad and can range from Search Engine
             Optimization (SEO), Search Engine Marketing (SEM), paid social media advertising, influencer marketing, content
             marketing and a wide range of others. Each of these would need an expert and you cannot do all by yourself. Outsource
             them.</p><br>
-            <h5>9. Managing websites</h5><br>
+            <h4>9. Managing websites</h4><br>
               <p>There is so much involved when it comes to managing your business website or your personal website. From building the
               website to managing the content on it and renewing domain and hosting plans, you can get frustrated or overwhelmed. This
               is the reason you should outsource this.</p><br>
-             <h5>10. Content formatting and editing</h5><br>
+             <h4>10. Content formatting and editing</h4><br>
                 <p>Business managers and solopreneurs are mostly perfectionists and like to manage their work by themselves but having a
                 fresh eye go over your written work to provide proper edits is always better. By outsourcing this task, you would be
                 able to catch errors that your eyes must have skipped when you have a different person helping you with content editing
@@ -137,8 +139,8 @@
                 Contact us today to outsource your tasks.</p>
 
           </div>
-          <div class="author-container"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="author-image">
-            <div class="author-text"><span class="author-text-name">Simon Justin</span><br>Finance Manager @NewYork</div>
+          <div class="author-container"><img src="img/colibri-logo.svg" width="128" alt="" class="author-image">
+            <div class="author-text"><span class="author-text-name">Colibri Africa</span><br>Boosting your productivity</div>
           </div>
         </div>
       </div>
@@ -146,35 +148,44 @@
   </div>
 
 
-  <!-- footer -->
+
+  <!-- Footer -->
   <div class="section section-footer">
     <div class="container footer-top">
       <div class="col flow">
-        <div class="heading-beta margin-bottom">Let&#x27;s Talk</div><a href="mailto:hello@gresk.ninja" class="email-address">hello@gresk.ninja</a></div>
-      <div class="col sm-12"><img src="images/logo2.svg" alt=""></div>
+        <div class="heading-beta margin-bottom">Let&#x27;s Talk</div>
+        <a href="mailto:info@colibri.africa" class="email-address">info@colibri.africa</a>
+        <h4 style="color: white;">+233 505 469 717</h4>
+        <!-- social icons -->
+        <div class="social" style="float: right;">
+          <a href="https://www.facebook.com/colibriafrica" target="blank" class="fa fa-facebook"></a>
+          <a href="https://twitter.com/colibriafrica" target="blank" class="fa fa-twitter"></a>
+          <a href="https://www.linkedin.com/company/colibri-africa/" target="blank" class="fa fa-linkedin"></a>
+          <a href="https://www.instagram.com/colibri.africa/" target="blank" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-whatsapp"></a>
+        </div>
+      </div>
     </div>
     <div class="container">
       <div class="col flow">
-        <div>3552 Murphy Court, Building 77<br>Surabaya, East Java 60217</div>
-      </div>
+        <h2>About</h2>
+      <p style="color:white">
+          We have a Colibri assistant for you but you would never know if you do not reach out.
+          Whether you are looking to do a task, a project or you just need a virtual assistant that could be an extension
+          of yourself or your team. <br> Reach out to us today. </p>
+        </div>
       <div class="col flex flex-width-700">
         <div class="footer-nav-block flex xs-12">
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Contact Us</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Term of Use</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Privacy</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Environmental Policy</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">FAQ</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Impact</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Get a Quote</a></div>
         </div>
         <div class="footer-nav-block flex xs-12">
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Industry</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Consulting Services</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Insight</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Resources</a></div>
-        </div>
-        <div class="footer-nav-block flex xs-12">
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Linkedin</a></div>
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Twitter</a></div>
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Instagram</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Youtube</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
         </div>
       </div>
     </div>
