--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">Impact</a></li>
         <li><a href="services.html">Services</a></li>
+        <li><a href="works.html">Process</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact-us.html">Contact</a></li>
       </ul>
@@ -76,12 +77,12 @@
         </div>
       </div>
       <div class="container margin-bottom">
-        <div class="col lg-12"><img src="img/1.jpg" sizes="100vw" alt=""></div>
+        <div class="col lg-12"><img src="img/a.jpg" sizes="100vw" alt=""></div>
       </div>
     </a>
     <div class="container">
       <div class="col flex">
-        <div class="blog-item-date">Sep 19</div>
+        <div class="blog-item-date">April 20 </div>
         <div class="blog-text">
           <p class="blog-excerpt margin-bottom"> African business owners and entrepreneurs in the diaspora need to grow their business one way or another. They need to
           boost productivity as they free up valuable time for themselves and their team of employees or workers. They also need...</p><a href="single-post2.html" class="read-more">Read More</a></div>
@@ -96,12 +97,12 @@
         </div>
       </div>
       <div class="container margin-bottom">
-        <div class="col lg-12"><img src="img/40.jpeg" sizes="100vw" alt=""></div>
+        <div class="col lg-12"><img src="img/16.jpeg" sizes="100vw" alt=""></div>
       </div>
     </a>
     <div class="container">
       <div class="col flex">
-        <div class="blog-item-date">Sep 19</div>
+        <div class="blog-item-date">April 20</div>
         <div class="blog-text">
           <p class="blog-excerpt margin-bottom">Hiring a virtual assistant the right way is critical to ensuring that you reap all the benefits that come with them.
           Otherwise, they might become another problem you may have to solve. These are some general...</p><a href="single-post3.html" class="read-more">Read More</a></div>
@@ -109,41 +110,55 @@
     </div>
   </div>
 
-  <div class="paging">
+  <!-- <div class="paging">
     <div class="container">
       <div class="paging-container">
         <div><span class="paging-arrow">&lt;</span> <span class="paging-number current">1</span> <span class="paging-number">2</span> <span class="paging-number">3</span> <span class="paging-number">4</span> <span class="paging-number">5</span> <span class="paging-arrow">&gt;</span></div>
       </div>
     </div>
-  </div>
+  </div> -->
+
+  <!-- Footer -->
   <div class="section section-footer">
     <div class="container footer-top">
       <div class="col flow">
-        <div class="heading-beta margin-bottom">Let&#x27;s Talk</div><a href="mailto:hello@gresk.ninja" class="email-address">hello@gresk.ninja</a></div>
-      <div class="col sm-12"><img src="images/logo2.svg" alt=""></div>
+        <div class="heading-beta margin-bottom">Let&#x27;s Talk</div>
+        <a href="mailto:info@colibri.africa" class="email-address">info@colibri.africa</a>
+        <h4 style="color: white;">+233 505 469 717</h4>
+  
+  
+        <!-- social icons -->
+        <div class="social" style="float: right;">
+          <a href="https://www.facebook.com/colibriafrica" target="blank" class="fa fa-facebook"></a>
+          <a href="https://twitter.com/colibriafrica" target="blank" class="fa fa-twitter"></a>
+          <a href="https://www.linkedin.com/company/colibri-africa/" target="blank" class="fa fa-linkedin"></a>
+          <a href="https://www.instagram.com/colibri.africa/" target="blank" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-whatsapp"></a>
+        </div>
+      </div>
+  
+  
     </div>
     <div class="container">
       <div class="col flow">
-        <div>3552 Murphy Court, Building 77<br>Surabaya, East Java 60217</div>
-      </div>
+        <h2>About</h2>
+  
+        <p style="color:white">
+          We have a Colibri assistant for you but you would never know if you do not reach out.
+          Whether you are looking to do a task, a project or you just need a virtual assistant that could be an extension
+          of yourself or your team. <br> Reach out to us today. </p> </div>
       <div class="col flex flex-width-700">
         <div class="footer-nav-block flex xs-12">
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Contact Us</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Term of Use</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Privacy</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Environmental Policy</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">FAQ</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Impact</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Get a Quote</a></div>
         </div>
         <div class="footer-nav-block flex xs-12">
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Industry</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Consulting Services</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Insight</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Resources</a></div>
-        </div>
-        <div class="footer-nav-block flex xs-12">
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Linkedin</a></div>
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Twitter</a></div>
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Instagram</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Youtube</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
         </div>
       </div>
     </div>
