--- a/contact-us.html
+++ b/contact-us.html
@@ -15,6 +15,9 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
   <link href="css/gresk.webflow.css" rel="stylesheet" type="text/css">
+  <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+  
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Gothic A1:regular,700,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -35,6 +38,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">Impact</a></li>
         <li><a href="services.html">Services</a></li>
+        <li><a href="works.html">Process</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact-us.html">Contact</a></li>
       </ul>
@@ -54,9 +58,9 @@
       </div>
     </div>
     <div class="container">
-      <div class="col lg-12">
+      <!-- <div class="col lg-12">
         <div class="ultra-big-fat-paragraph">So we can help serve you better, please complete the form below. <br>We will respond as soon as possible, usually within a few business days.</div>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="section padding-top-double padding-bottom-double">
@@ -96,8 +100,9 @@
     </div>
   </div>
 
+    <h1 style="text-align: center;">Frequently Asked Questions</h1>
   <main>
-    <h1>Frequently Asked Questions</h1>
+  
     <div class="topic">
       <div class="open">
         <h2 class="question">1. Who is a virtual assistant?</h2>
@@ -194,149 +199,24 @@
         monthly payment plan
         based on your subscription.</p>
     </div>
-    <div class="topic">
-      <div class="open">
-        <h2 class="question">11.What tasks can I outsource to a virtual assistant?
-        </h2><span class="faq-t"></span>
-      </div>
-      <p class="answer">General administrative tasks, sales and marketing tasks, tech-related tasks, legal tasks and any
-        other thing that takes
-        your time but is not worth your time. All low-valued tasks also fall into this category. You can outsource
-        virtually
-        anything to a virtual assistant.</p>
-    </div>
-    <div class="topic">
-      <div class="open">
-        <h2 class="question">12.Why do I need to have a consultation call?
-        </h2><span class="faq-t"></span>
-      </div>
-      <p class="answer">To make sure you can work with the right VA for you, it is important that we know who you are,
-        what exactly you need,
-        and what is important to you and your VA skill expectations.
-        Don't panic, the calls last on average 15 minutes. Because we know how precious your time is, we strive to be
-        efficient
-        and concise in our meetings.</p>
-    </div>
-    <div class="topic">
-      <div class="open">
-        <h2 class="question">13.Why do I need to speak with the Colibri Assistant you recommend?
-        </h2><span class="faq-t"></span>
-      </div>
-      <p class="answer">Your new virtual assistant will be working with you for a long time, day in and day out, so we
-        think it's important that
-        you have a chance to connect and verify that you are working with the right person for you and your business. Do
-        not
-        worry, we will be at your side and in addition this call will last as long as you want according to your taste.
-      </p>
-    </div>
-    <div class="topic">
-      <div class="open">
-        <h2 class="question">14.Do I need to pay before speaking with the Colibri Assistant you match me with?
-  
-        </h2><span class="faq-t"></span>
-      </div>
-      <p class="answer">Not at all. You have the flexibility to speak with as many VAs as you want until you find the one
-        that's right for you.
-        You will pay once you have made your final decision.
-      </p>
-    </div>
-    <div class="topic">
-      <div class="open">
-        <h2 class="question">13.Why do I need to speak with the Colibri Assistant you recommend?
-        </h2><span class="faq-t"></span>
-      </div>
-      <p class="answer">Your new virtual assistant will be working with you for a long time, day in and day out, so we
-        think it's important that
-        you have a chance to connect and verify that you are working with the right person for you and your business. Do
-        not
-        worry, we will be at your side and in addition this call will last as long as you want according to your taste.
-      </p>
-    </div>
-    <div class="topic">
-      <div class="open">
-        <h2 class="question">14.Where Are the VAs Located?
-        </h2><span class="faq-t"></span>
-      </div>
-      <p class="answer">Colibri Africa is entirely remote and has virtual assistants from all over Africa.
-  
-      </p>
-    </div>
-    <div class="topic">
-      <div class="open">
-        <h2 class="question">15.What is a repetitive task?
-        </h2><span class="faq-t"></span>
-      </div>
-      <p class="answer">Repetitive tasks tend to be made up of several movements performed within a short time span, which
-        are then repeated
-        over and over again.
-      </p>
-    </div>
-    <div class="topic">
-      <div class="open">
-        <h2 class="question">16.WHow do I get started with Colibri Africa?
-        </h2><span class="faq-t"></span>
-      </div>
-      <p class="answer">The fastest way to get started is to call us or message us on Whatsapp on (223) xxxxxxx or fill
-        out your information on
-        the contact form. The next step is to meet with us so that we can better understand the problem Colibri Africa can
-        solve
-        for you. We will then provide you with a personalized proposal with an overview of the prices, the proposed
-        solution and
-        the workflow.
-      </p>
-    </div>
-    <div class="topic">
-      <div class="open">
-        <h2 class="question">17.On average, what is the turnaround time for a project? How is this time determined?
-        </h2><span class="faq-t"></span>
-      </div>
-      <p class="answer">The turnaround time is determined on a project-by-project basis and depends on the nature and
-        scope of the tasks to be
-        accomplished. It should be noted that although there are limits to the volume of tasks that Colibri Africa can
-        accommodate, every effort will be made to determine these limits before the start of each project in order to
-        accurately
-        manage expectations and meet all project deadlines.
-      </p>
-    </div>
-    <div class="topic">
-      <div class="open">
-        <h2 class="question">18.What quality control measures are implemented into the workflows?
-        </h2><span class="faq-t"></span>
-      </div>
-      <p class="answer">Once the tasks have been completed by our colibri assistants, they are sent to the reviewers for
-        verification before
-        final submission. Our review system makes it possible to double check the work before sending it to the end
-        customer for
-        validation.
-      </p>
-    </div>
-    <div class="topic">
-      <div class="open">
-        <h2 class="question">19. I want some of your colibri assistants to work long term. Can you help me?
-  
-        </h2><span class="faq-t"></span>
-      </div>
-      <p class="answer">We have a virtual assistant formula that allows you to choose according to your project, its
-        duration and its
-        requirements of the workers that we will make available to you in a dedicated part-time way for as long as you
-        wish.
-      </p>
-    </div>
-  
   </main>
 
   <!-- Footer -->
   <div class="section section-footer">
     <div class="container footer-top">
       <div class="col flow">
-        <div class="heading-beta margin-bottom">Let&#x27;s Talk</div><a href="mailto:info@colibri.africa"
-          class="email-address">info@colibri.africa</a>
+        <div class="heading-beta margin-bottom">Let&#x27;s Talk</div>
+        <a href="mailto:info@colibri.africa" class="email-address">info@colibri.africa</a>
+        <h4 style="color: white;">+233 505 469 717</h4>
+  
+  
         <!-- social icons -->
         <div class="social" style="float: right;">
-          <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-twitter"></a>
-          <a href="#" class="fa fa-linkedin"></a>
-          <a href="#" class="fa fa-instagram"></a>
+          <a href="https://www.facebook.com/colibriafrica" target="blank" class="fa fa-facebook"></a>
+          <a href="https://twitter.com/colibriafrica" target="blank" class="fa fa-twitter"></a>
+          <a href="https://www.linkedin.com/company/colibri-africa/" target="blank" class="fa fa-linkedin"></a>
+          <a href="https://www.instagram.com/colibri.africa/" target="blank" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-whatsapp"></a>
         </div>
       </div>
   
@@ -350,7 +230,12 @@
           We have a Colibri assistant for you but you would never know if you do not reach out.
           Whether you are looking to do a task, a project or you just need a virtual assistant that could be an extension
           of
-          yourself or your team. <br> Reach out to us today.</p>
+          yourself or your team. <br> Reach out to us today.
+  
+        </p>
+  
+  
+  
       </div>
       <div class="col flex flex-width-700">
         <div class="footer-nav-block flex xs-12">
