--- a/single-post3.html
+++ b/single-post3.html
@@ -13,6 +13,8 @@
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/webflow.css" rel="stylesheet" type="text/css">
     <link href="css/gresk.webflow.css" rel="stylesheet" type="text/css">
+     <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script
         type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Gothic A1:regular,700,900"] } });</script>
@@ -22,68 +24,66 @@
 </head>
 
 <body>
-    <div class="nav-wrapper">
-        <div class="container navigation-bar">
-            <!-- <nav> -->
-            <div class="logo">
-                <a href="index.html" class="logo-block w-inline-block w--current">
-                    <img src="img/colibri-logo.svg" alt="">
-                </a>
-            </div>
-            <ul class="nav-links">
-                <!-- <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">Impact</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="works.html">Process</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="contact-us.html">Contact</a></li> -->
-
-
-
-
-
-            </ul>
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-            <!-- </nav> -->
-
+<div class="nav-wrapper">
+    <div class="container navigation-bar">
+        <!-- <nav> -->
+        <div class="logo">
+            <a href="index.html" class="logo-block w-inline-block w--current">
+                <img src="img/colibri-logo.svg" alt="">
+            </a>
         </div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">Impact</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="works.html">Process</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact-us.html">Contact</a></li>
+
+
+
+
+
+        </ul>
+        <!-- <div class="burger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div> -->
+        <!-- </nav> -->
+
     </div>
+</div>
     <div class="blog-single-post">
         <div class="container main-blog-top">
             <div class="col main-blog-title">
-                <h1 class="main-blog-top heading-5">5 COMMON MISTAKES TO AVOID WHEN HIRING A VIRTUAL ASSITANT</h1>
+                <h1 class="main-blog-top heading-5">5 common mistakes to avoid when hiring a Virtual Assistant</h1>
             </div>
         </div>
         <div class="container margin-bottom">
-            <div class="col lg-12"><img src="http://via.placeholder.com/1168x710"
-                    srcset="http://via.placeholder.com/1168x710 500w, http://via.placeholder.com/1168x710 800w, images/http://via.placeholder.com/1168x710 1080w, http://via.placeholder.com/1168x710 1280w"
-                    sizes="100vw" alt=""></div>
+            <div class="col lg-12"><img src="img/16.jpeg" sizes="100vw" alt=""></div>
         </div>
         <div class="container">
             <div class="col flex">
-                <div class="blog-item-date xs-12">Sep 19</div>
+                <div class="blog-item-date xs-12">April 19</div>
                 <div class="blog-text">
                     <div class="blog-rich-text w-richtext">
                         <p>Hiring a virtual assistant the right way is critical to ensuring that you reap all the benefits that come with them.
                         Otherwise, they might become another problem you may have to solve. These are some general tips to help you avoid
                         mistakes when hiring a virtual assistant. Here are a few of them.</p><br>
-                        <h5>1. Failing to understand the usefulness of a virtual assistant</h5><br>
+                        <h4>1. Failing to understand the usefulness of a virtual assistant</h4><br>
                         <p>Virtual assistants are useful for a purpose but if you don’t know their purpose, it will be difficult to hire the right
                         one to start with. A bad way to go about hiring a virtual assistant is anticipating business growth without having any
                         clear task for them to do. A bad move would be to hire virtual assistants because other businesses are doing so. In both
                         instances, you would not know which specific personality or skill sets to look out for when hiring.</p>
                         <br>
-                        <h5>2. Failing to provide the proper training</h5><br>
+                        <h4>2. Failing to provide the proper training</h4><br>
                         <p>When hiring a virtual assistant, you must take into consideration the need to train them. Virtual assistants do not know
                         your business as you do. It is your duty to bring them up to speed. It is also your responsibility to give them clear
                         instructions on the kinds of tasks you want them to undertake. This would help you glean the best from them, saving you
                         time and money. This means you must be patient, provide constant feedback, avoid vagueness and communicate constantly
                         with your assistant.</p><br>
-                        <h5>3. Not providing a qualifying framework</h5><br>
+                        <h4>3. Not providing a qualifying framework</h4><br>
                         <p>You should never hire a virtual assistant simply because they have an impressive resume. Just as it is with hiring any
                         employee, a workable system must govern the screening of virtual assistants. Consider an interview, an evaluation of
                         personal qualities and skill sets and a behavioural test to assess them holistically. This would give you a better
@@ -91,12 +91,12 @@
                         again. You would have to do all of these if you are hiring a virtual assistant yourself but if you request the services
                         of a virtual assistant from a virtual assistant company, you would not have to go through any of this process. They
                         would take care of it for you.</p><br>
-                        <h5>4. Not considering enough candidates</h5><br>
+                        <h4>4. Not considering enough candidates</h4><br>
                         <p>Don’t hire the very first candidate you interview just because they impressed you. Trust me, several others will amaze
                         you. Wait until you have a pool of candidates and carefully compare all their personal qualities, skill sets and
                         experience to get yourself the ideal fit for your business. A virtual assistant company like Colibri also allows you to
                         change a virtual assistant if you are not satisfied with your first choice.</p><br>
-                            <h5>5. Lack of a clear communication</h5><br>
+                            <h4>5. Lack of a clear communication</h4><br>
                             <p>A virtual assistant would not be with you all the time. This does not mean that you should not set up some good quality
                             control measures and constantly take progress reports. There are communication channels you can use for voice calls,
                             video calls and emails; you can establish constant communication with the virtual assistant. This is critical for a good
@@ -104,27 +104,16 @@
 
 
 
-
-
-
-
-
-                        <figure style="max-width:1280pxpx" id="w-node-3fa1170ce4c1-cfe553e0"
-                            class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-                            <div><img src="http://via.placeholder.com/1068x620" alt=""></div>
-                            <figcaption>Financial Report</figcaption>
-                        </figure>
-
                         <h2>Conclusion</h2><br>
                         <p>If you must free up your time and improve productivity with virtual assistants, avoiding common mistakes that most
                         people make would save you heartaches. It is possible to have a great working relationship with virtual assistants who
                         will in turn work with you for your personal and business success when you hire correctly.</p>
 
                     </div>
-                    <div class="author-container"><img src="http://via.placeholder.com/128x128" width="128" alt=""
+                    <div class="author-container"><img src="img/colibri-logo.svg" width="128" alt=""
                             class="author-image">
-                        <div class="author-text"><span class="author-text-name">Simon Justin</span><br>Finance Manager
-                            @NewYork</div>
+                        <div class="author-text"><span class="author-text-name">Colibri Africa</span><br>
+                        Boosting your productivity</div>
                     </div>
                 </div>
             </div>
@@ -132,41 +121,52 @@
     </div>
 
 
-    <!-- footer -->
-    <div class="section section-footer">
-        <div class="container footer-top">
-            <div class="col flow">
-                <div class="heading-beta margin-bottom">Let&#x27;s Talk</div><a href="mailto:hello@gresk.ninja"
-                    class="email-address">hello@gresk.ninja</a>
+<!-- Footer -->
+<div class="section section-footer">
+    <div class="container footer-top">
+        <div class="col flow">
+            <div class="heading-beta margin-bottom">Let&#x27;s Talk</div>
+            <a href="mailto:info@colibri.africa" class="email-address">info@colibri.africa</a>
+            <h4 style="color: white;">+233 505 469 717</h4>
+
+
+            <!-- social icons -->
+            <div class="social" style="float: right;">
+                <a href="https://www.facebook.com/colibriafrica" target="blank" class="fa fa-facebook"></a>
+                <a href="https://twitter.com/colibriafrica" target="blank" class="fa fa-twitter"></a>
+                <a href="https://www.linkedin.com/company/colibri-africa/" target="blank" class="fa fa-linkedin"></a>
+                <a href="https://www.instagram.com/colibri.africa/" target="blank" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-whatsapp"></a>
             </div>
-            <div class="col sm-12"><img src="images/logo2.svg" alt=""></div>
         </div>
-        <div class="container">
-            <div class="col flow">
-                <div>3552 Murphy Court, Building 77<br>Surabaya, East Java 60217</div>
+
+
+    </div>
+    <div class="container">
+        <div class="col flow">
+            <h2>About</h2>
+
+            <p style="color:white">
+                We have a Colibri assistant for you but you would never know if you do not reach out.
+                Whether you are looking to do a task, a project or you just need a virtual assistant that could be an
+                extension of
+                yourself or your team. <br> Reach out to us today.</p> </div>
+        <div class="col flex flex-width-700">
+            <div class="footer-nav-block flex xs-12">
+                <div class="footer-menu-list"><a href="#" class="footer-link-item">Contact Us</a></div>
+                <div class="footer-menu-list"><a href="#" class="footer-link-item">FAQ</a></div>
+                <div class="footer-menu-list"><a href="#" class="footer-link-item">Impact</a></div>
+                <div class="footer-menu-list"><a href="#" class="footer-link-item">Get a Quote</a></div>
             </div>
-            <div class="col flex flex-width-700">
-                <div class="footer-nav-block flex xs-12">
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Contact Us</a></div>
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Term of Use</a></div>
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Privacy</a></div>
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Environmental Policy</a></div>
-                </div>
-                <div class="footer-nav-block flex xs-12">
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Industry</a></div>
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Consulting Services</a></div>
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Insight</a></div>
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Resources</a></div>
-                </div>
-                <div class="footer-nav-block flex xs-12">
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Twitter</a></div>
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Instagram</a></div>
-                    <div class="footer-menu-list"><a href="#" class="footer-link-item">Youtube</a></div>
-                </div>
+            <div class="footer-nav-block flex xs-12">
+                <div class="footer-menu-list"><a href="#" class="footer-link-item">Linkedin</a></div>
+                <div class="footer-menu-list"><a href="#" class="footer-link-item">Twitter</a></div>
+                <div class="footer-menu-list"><a href="#" class="footer-link-item">Instagram</a></div>
+                <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
             </div>
         </div>
     </div>
+</div>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="js/webflow.js" type="text/javascript"></script>
