--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
                   <div class="col lg-6 align-middle padding-bottom sm-12">
                     <div class="testimonial-quote">The Colibri team is fast and efficient. I was very impressed with the output I got.</div>
                     <div class="testimonial-footer">
-                      <img src="http://via.placeholder.com/65x65" alt="" class="testimonial-logo">
+                      <!-- <img src="http://via.placeholder.com/65x65" alt="" class="testimonial-logo"> -->
                       <p class="testimonial-meta"><span class="text-span">Favour Barde</span><br><span class="testimonial-position"> Co-Founder @Massira</span></p>
                     </div>
                   </div>
                   <div class="col lg-6 sm-12">
-                    <img src="http://via.placeholder.com/555x370" data-w-id="e3153436-1f3a-59d5-e34b-a5264fc4fa78" alt="" class="testimonial-photo">
+                    <img src="img/massira logo.png" data-w-id="e3153436-1f3a-59d5-e34b-a5264fc4fa78" alt="" class="testimonial-photo">
                   </div>
                 </div>
               </div>
@@ -252,12 +252,12 @@
                     <div class="testimonial-quote">Colibri offers a lot of services and the writing services has been really helpful to me and the way I run my business.
                     It feels like an having a good quality extension arm of your day-to-day business. Highly recommend</div>
                     <div class="testimonial-footer">
-                      <img src="http://via.placeholder.com/65x65" alt="" class="testimonial-logo">
+                      <!-- <img src="http://via.placeholder.com/65x65" alt="" class="testimonial-logo"> -->
                       <p class="testimonial-meta"><span class="text-span">Lotana Nwose</span><br><span class="testimonial-position">Co-Founder @Investsika</span></p>
                     </div>
                   </div>
                   <div class="col lg-6 sm-12">
-                    <img src="http://via.placeholder.com/555x370" data-w-id="85862840-b7cc-4e28-de67-3142226b1b7a" alt="" class="testimonial-photo">
+                    <img src="img/investsika.png" data-w-id="85862840-b7cc-4e28-de67-3142226b1b7a" alt="" class="testimonial-photo">
                   </div>
                 </div>
               </div>
@@ -267,12 +267,12 @@
                     <div class="testimonial-quote">Working with Colibri is an actual pleasure. <br>Yes, they take their time to revise and recheck their work as many times as
                     needed to deliver on their promised work.</div>
                     <div class="testimonial-footer">
-                      <img src="http://via.placeholder.com/65x65" alt="" class="testimonial-logo">
+                      <!-- <img src="http://via.placeholder.com/65x65" alt="" class="testimonial-logo"> -->
                       <p class="testimonial-meta"><span class="text-span">Sam Baddoo</span><br><span class="testimonial-position">Co-Founder @Fleri</span></p>
                     </div>
                   </div>
                   <div class="col lg-6 sm-12">
-                    <img src="http://via.placeholder.com/555x370" data-w-id="a3466293-1f91-d677-6480-057a44c5cb11" alt="" class="testimonial-photo"></div>
+                    <img src="img/FLERI LOGO.svg" data-w-id="a3466293-1f91-d677-6480-057a44c5cb11" alt="" class="testimonial-photo"></div>
                 </div>
               </div>
             </div>
