--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jul 11 2019 02:22:28 GMT+0000 (UTC)  -->
 <html data-wf-page="5d12e6080779136d9b48d3af" data-wf-site="5d11db7bf9a609f7ab646d8c">
 <head>
   <meta charset="utf-8">
-  <title>Colibri</title>
-  <meta content="Some keywords that best describes your site" name="description">
+  <title>Colibri Africa || Boosting your productivity</title>
+  <meta name ="keywords" content ="VIRTUAL ASSISTANT,VIRTUAL ASSISTANT COMPANY, OUTSOURCE, PRODUCTIVITY"/>
+  <meta content="Virtual assistant company" name="A reliable virtual assistant company for businesses and individuals that value time and well-being."">
   <meta content="Outsourcing digital task" property="og:title">
-  <meta content="Some keywords that best describes your site" property="og:description">
+  <meta content="A reliable virtual assistant company for businesses and individuals that value time and well-being." property="og:description">
   <meta content="summary" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   
@@ -18,42 +17,19 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Gothic A1:regular,700,900"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-<link rel="apple-touch-icon" sizes="180x180" href="css/favicon/apple-touch-icon.png">
+      <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="css/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="css/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="css/favicon/favicon-16x16.png">
-<link rel="manifest" href="img/favicon/site.webmanifest">
+<link rel="manifest" href="css/favicon/site.webmanifest">
+
 </head>
 <div class="body">
   
   <div class="nav-wrapper">
     <div class="container navigation-bar">
       <!-- <nav> -->
-       <!-- <div class="logo">
-        <a href="index.html" class="logo-block w-inline-block w--current">
-        <img src="img/colibri-logo.svg" alt="">
-      </a>
-    </div> -->
-        <!-- <div class="navbar">
-          <div data-collapse="all" data-animation="default" data-duration="400" class="simple-nav w-nav">
-            <div class="menu-container w-container">
-              <nav role="navigation" class="simple-nav-link-holder w-nav-menu">
-                <a href="index.html" class="simple-link w-nav-link w--current">Home</a>
-                <a href="about.html" class="simple-link w-nav-link">About</a>
-                <a href="consulting-services.html" class="simple-link w-nav-link">Services</a>
-                <a href="blog.html" class="simple-link w-nav-link">Blog</a>
-                <a href="contact-us.html" class="simple-link w-nav-link">Contact</a></nav>
-              <div data-ix="shortend" class="simple-menu-button w-nav-button">
-                <div class="line-1 simple"></div>
-                <div class="line-2 simple"></div>
-                <div class="line-3 simple"></div>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        <!-- nav -->
- 
+       
         <div class="logo">
           <a href="index.html" class="logo-block w-inline-block w--current">
             <img src="img/colibri-logo.svg" alt="">
@@ -82,7 +58,7 @@
 
   <div class="section">
     <div class="container flex-v">
-      <h1 class="hero-title">There is a virtual assistant for your every need.</h1>
+      <h1 class="hero-title">There is a virtual assistant for your <span style="color: #FA5D5B;">every need.</span></h1>
     </div>
     <div class="container extended">
       <div class="col lg-12">
@@ -353,16 +329,16 @@
       </div>
       <div class="col flex flex-width-700">
         <div class="footer-nav-block flex xs-12">
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Contact Us</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">FAQ</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Impact</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Get a Quote</a></div>
+          <div class="footer-menu-list"><a href="mailto:info@colibri.africa" class="footer-link-item" target="blank">Contact Us</a></div>
+          <div class="footer-menu-list"><a href="services.html" class="footer-link-item" target="blank">Services</a></div>
+          <div class="footer-menu-list"><a href="about.html" class="footer-link-item" target="blank">Our Impact</a></div>
+          <div class="footer-menu-list"><a href="blog.html" class="footer-link-item" target="blank">Blog</a></div>
         </div>
         <div class="footer-nav-block flex xs-12">
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Linkedin</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Twitter</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Instagram</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item" target="blank">Get a Quote</a></div>
+          <div class="footer-menu-list"><a href="https://calendly.com/colibriafrica-1/30min?month=2021-04" target="blank"class="footer-link-item">Book a call</a></div>
+          <div class="footer-menu-list"><a href="contact-us.html" class="footer-link-item"target="blank">FAQ</a></div>
+          <div class="footer-menu-list"><a href="works.html" class="footer-link-item"target="blank">How it works</a></div>
         </div>
       </div>
     </div>
