--- a/services.html
+++ b/services.html
@@ -1,13 +1,16 @@
 
 <html data-wf-page="5d1978a7f3be3c3e6c8ee09f" data-wf-site="5d11db7bf9a609f7ab646d8c">
 <head>
-  <meta charset="utf-8">
-  <title>Services</title>
-  <meta content="Some keywords that best describes your site" name="description">
-  <meta content="Virtual Assistance" property="og:title">
-  <meta content="Virtual Assistance, Outsorcing" property="og:description">
-  <meta content="summary" name="twitter:card">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
+<meta charset="utf-8">
+<title>Colibri Africa || Boosting your productivity</title>
+<meta name="keywords" content="VIRTUAL ASSISTANT,VIRTUAL ASSISTANT COMPANY, OUTSOURCE, PRODUCTIVITY" />
+<meta content="Virtual assistant company"
+  name="A reliable virtual assistant company for businesses and individuals that value time and well-being."">
+  <meta content=" Outsourcing digital task" property="og:title">
+<meta content="A reliable virtual assistant company for businesses and individuals that value time and well-being."
+  property="og:description">
+<meta content="summary" name="twitter:card">
+<meta content="width=device-width, initial-scale=1" name="viewport">
   
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
@@ -16,7 +19,11 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Gothic A1:regular,700,900"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="css/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="css/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="css/favicon/favicon-16x16.png">
+<link rel="manifest" href="css/favicon/site.webmanifest">
   
   
 </head>
@@ -166,7 +173,7 @@
         
           </div>
           <div class="hello">
-            <a href="services.html" class="button7" style="background-color:#fa5d5b; color:#fff">Get Started</a>
+            <a href="https://api.whatsapp.com/send?phone=233508346715&text=Hello%20there!%20Welcome%20to%20Colibri%20Africa%E2%98%BA%EF%B8%8F%20How%20can%20we%20help%20you" target="blank" class="button7" style="background-color:#fa5d5b; color:#fff">Get Started</a>
           </div>
         </div>
       </div>
@@ -188,7 +195,7 @@
         <a href="https://twitter.com/colibriafrica" target="blank" class="fa fa-twitter"></a>
         <a href="https://www.linkedin.com/company/colibri-africa/" target="blank" class="fa fa-linkedin"></a>
         <a href="https://www.instagram.com/colibri.africa/" target="blank" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-whatsapp"></a>
+        <a href="https://api.whatsapp.com/send?phone=233508346715&text=Hello%20there!%20Welcome%20to%20Colibri%20Africa%E2%98%BA%EF%B8%8F%20How%20can%20we%20help%20you" target="blank" class="fa fa-whatsapp"></a>
       </div>
     </div>
 
