--- a/single-post.html
+++ b/single-post.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html data-wf-page="5d1ac4914dad3974cfe553e0" data-wf-site="5d11db7bf9a609f7ab646d8c">
 <head>
-  <meta charset="utf-8">
-  <title>Single Post</title>
-  <meta content="Some keywords that best describes your site" name="description">
-  <meta content="Single Post" property="og:title">
-  <meta content="Some keywords that best describes your site" property="og:description">
-  <meta content="summary" name="twitter:card">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta charset="utf-8">
+    <title>Colibri Africa || Boosting your productivity</title>
+    <meta name="keywords" content="VIRTUAL ASSISTANT,VIRTUAL ASSISTANT COMPANY, OUTSOURCE, PRODUCTIVITY,TASKS" />
+    <meta content="Virtual assistant company"
+      name="A reliable virtual assistant company for businesses and individuals that value time and well-being."">
+      <meta content=" Outsourcing digital task" property="og:title">
+    <meta content="A reliable virtual assistant company for businesses and individuals that value time and well-being."
+      property="og:description">
+    <meta content="summary" name="twitter:card">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
   
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
@@ -17,7 +20,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Gothic A1:regular,700,900"]  }});</script>
   
- <!-- favicon -->
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="css/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="css/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="css/favicon/favicon-16x16.png">
+<link rel="manifest" href="css/favicon/site.webmanifest">
+
 
 </head>
 <body>
@@ -42,11 +50,11 @@
 
 
     </ul>
-    <!-- <div class="burger">
+    <div class="burger">
       <div class="line1"></div>
       <div class="line2"></div>
       <div class="line3"></div>
-    </div> -->
+    </div>
     <!-- </nav> -->
 
   </div>
