--- a/works.html
+++ b/works.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jul 11 2019 02:22:28 GMT+0000 (UTC)  -->
 <html data-wf-page="5d12e6080779136d9b48d3af" data-wf-site="5d11db7bf9a609f7ab646d8c">
 
 <head>
-    <meta charset="utf-8">
-    <title>Colibri</title>
-    <meta content="Some keywords that best describes your site" name="description">
-    <meta content="Outsourcing digital task" property="og:title">
-    <meta content="Some keywords that best describes your site" property="og:description">
-    <meta content="summary" name="twitter:card">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
+<meta charset="utf-8">
+<title>Colibri Africa || Boosting your productivity</title>
+<meta name="keywords" content="VIRTUAL ASSISTANT,VIRTUAL ASSISTANT COMPANY, OUTSOURCE, PRODUCTIVITY" />
+<meta content="Virtual assistant company"
+    name="A reliable virtual assistant company for businesses and individuals that value time and well-being."">
+  <meta content=" Outsourcing digital task" property="og:title">
+<meta content="A reliable virtual assistant company for businesses and individuals that value time and well-being."
+    property="og:description">
+<meta content="summary" name="twitter:card">
+<meta content="width=device-width, initial-scale=1" name="viewport">
 
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/webflow.css" rel="stylesheet" type="text/css">
@@ -20,12 +21,14 @@
     <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
 
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script
         type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Gothic A1:regular,700,900"] } });</script>
-    <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
+             <!-- favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="css/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="css/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="css/favicon/favicon-16x16.png">
+        <link rel="manifest" href="css/favicon/site.webmanifest">
 
 </head>
 
